--- a/Password Manager/Pages/LoggedInPage.xaml
+++ b/Password Manager/Pages/LoggedInPage.xaml
@@ -9,6 +9,31 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Page.Resources>
+        <local:AmIVisible x:Key="amIVisible"/>
+        <!--<ContextMenu x:Key="passwordsContextMenu">
+            <MenuItem Header="New Passwords" IsEnabled="False"/>
+            <Separator/>
+            <MenuItem Header="Rename" Click="Rename"/>
+            <MenuItem Header="Delete" Click="Delete"/>
+        </ContextMenu>
+        <ContextMenu x:Key="imageContextMenu">
+            <MenuItem Header="New Image" IsEnabled="False"/>
+            <Separator/>
+            <MenuItem Header="Rename" Click="Rename"/>
+            <MenuItem Header="Delete" Click="Delete"/>
+        </ContextMenu>
+        <ContextMenu x:Key="directoryContextMenu">
+            <MenuItem Header="New Directory" IsEnabled="False"/>
+            <Separator/>
+            <MenuItem Header="Add Directory" Click="AddDir"/>
+            <MenuItem Header="Add File">
+                <MenuItem Header="Passwords" Click="AddPass"/>
+                <MenuItem Header="Image" Click="AddImg"/>
+            </MenuItem>
+            <Separator/>
+            <MenuItem Header="Rename" Click="Rename"/>
+            <MenuItem Header="Delete" Click="Delete"/>
+        </ContextMenu>-->
         <ContextMenu x:Key="passwordsContextMenu">
             <MenuItem Header="New Passwords" IsEnabled="False"/>
             <Separator/>
@@ -57,15 +82,95 @@
         </Menu>
         <TreeView x:Name="FilesList" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
                   ContextMenu="{DynamicResource baseContextMenu}">
-            <TreeView.Resources>
+            <!--ContextMenu="{DynamicResource baseContextMenu}">-->
+            <!--<TreeView.Resources>
                 <Style TargetType="TreeViewItem">
                     <EventSetter Event="MouseRightButtonDown" Handler="TreeViewItem_MouseRightButtonDown"/>
                     <EventSetter Event="PreviewMouseLeftButtonDown" Handler="TreeViewItem_MouseLeftButtonDown"/>
+                    <EventSetter Event="MouseLeftButtonDown"  Handler="TreeViewItem_MouseLeftButtonDown"/>
                 </Style>
                 <Style TargetType="TreeView">
                     <EventSetter Event="MouseRightButtonDown" Handler="TreeView_MouseRightButtonDown"/>
                 </Style>
+            </TreeView.Resources>-->
+            <TreeView.Resources>
+                <HierarchicalDataTemplate DataType="{x:Type local2:Directory}" ItemsSource="{Binding Path=Items}">
+                    <StackPanel>
+                        <StackPanel.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="{Binding Header}" IsEnabled="False"/>
+                                <Separator/>
+                                <MenuItem Header="Add Directory" Click="AddDir"/>
+                                <MenuItem Header="Add File">
+                                    <MenuItem Header="Passwords" Click="AddPass"/>
+                                    <MenuItem Header="Image" Click="AddImg"/>
+                                </MenuItem>
+                                <Separator/>
+                                <MenuItem Header="Rename" Click="Rename"/>
+                                <MenuItem Header="Delete" Click="Delete"/>
+                            </ContextMenu>
+                        </StackPanel.ContextMenu>
+                        <TextBlock x:Name="DirectoryNameBlock" Text="{Binding Path=Header, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                   FontWeight="Bold"  HorizontalAlignment="Center" VerticalAlignment="Center" 
+                                   Visibility="{Binding IsBeingEdited, Converter={StaticResource amIVisible}, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBox x:Name="DirectoryNameBox" Text="{Binding Path=Header, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                 FontWeight="Bold"  HorizontalAlignment="Center" VerticalAlignment="Center" 
+                                 Visibility="{Binding IsBeingEdited, Converter={StaticResource amIVisible}, UpdateSourceTrigger=PropertyChanged}" />
+                        <!--  KeyDown="DirectoryNameBox_KeyDown"/>-->
+                    </StackPanel>
+                </HierarchicalDataTemplate>
+
+                <!-- Image -->
+                <DataTemplate DataType="{x:Type local2:Image}">
+                    <StackPanel>
+                        <StackPanel.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="{Binding Header}" IsEnabled="False"/>
+                                <MenuItem Header="Rename" Click="Rename"/>
+                                <MenuItem Header="Delete" Click="Delete"/>
+                            </ContextMenu>
+                        </StackPanel.ContextMenu>
+                        <!--  <TextBlock x:Name="ImageNameBlock" Text="chujchujchuj" FontStyle="Italic"/> -->
+                        <TextBlock x:Name="ImageNameBlock" Text="{Binding Name}" FontStyle="Italic"  
+                                   HorizontalAlignment="Center" VerticalAlignment="Center" 
+                                   Visibility="{Binding Path=IsBeingEdited, Converter={StaticResource amIVisible}}"/>
+                        <!--<TextBox x:Name="ImageNameBox" Text="{Binding Path=Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontStyle="Italic"  
+                                 HorizontalAlignment="Center" VerticalAlignment="Center" 
+                                 Visibility="{Binding IsBeingEdited, Converter={StaticResource amIVisible}, UpdateSourceTrigger=PropertyChanged}" />-->
+                        <!-- KeyDown="ImageNameBox_KeyDown" />-->
+                    </StackPanel>
+                </DataTemplate>
+
+                <!-- Password -->
+                <DataTemplate x:Key="PassTemplate" DataType="{x:Type local2:Passwords}">
+                    <StackPanel>
+                        <StackPanel.ContextMenu>
+                            <ContextMenu>
+                                <MenuItem Header="{Binding Header}" IsEnabled="False"/>
+                                <MenuItem Header="Rename" Click="Rename"/>
+                                <MenuItem Header="Delete" Click="Delete"/>
+                            </ContextMenu>
+                        </StackPanel.ContextMenu>
+                        <TextBlock x:Name="PasswordNameBlock" Text="{Binding Header, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                                   FontStyle="Italic"  HorizontalAlignment="Center" VerticalAlignment="Center" 
+                                   Visibility="{Binding IsIsBeingEdited, Converter={StaticResource amIVisible}, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBox x:Name="PasswordNameBox" Text="{Binding Path=Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" FontStyle="Italic"  
+                                 HorizontalAlignment="Center" VerticalAlignment="Center" 
+                                 Visibility="{Binding IsIsBeingEdited, Converter={StaticResource amIVisible}, UpdateSourceTrigger=PropertyChanged}" />
+                        <!--  KeyDown="PasswordNameBox_KeyDown" />-->
+                    </StackPanel>
+                    <!-- Path=passwordName-->
+                </DataTemplate>
+                <Style TargetType="TreeView">
+                    <EventSetter Event="MouseRightButtonDown" Handler="TreeView_MouseRightButtonDown"/>
+                </Style>
             </TreeView.Resources>
+            <TreeView.ItemContainerStyle>
+                <Style TargetType="{x:Type TreeViewItem}">
+                    <EventSetter Event="Selected" Handler="TreeViewItem_Selected"/>
+                    <!-- <EventSetter Event="MouseRightButtonDown" Handler="TreeViewItem_MouseRightButtonDown"/> -->
+                </Style>
+            </TreeView.ItemContainerStyle>
         </TreeView>
         <Frame x:Name="RightPage" Grid.Row="1" Grid.Column="1" NavigationUIVisibility="Hidden" />
     </Grid>
