--- a/Password Manager/Pages/PasswordEditorPage.xaml
+++ b/Password Manager/Pages/PasswordEditorPage.xaml
@@ -11,6 +11,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Page.Resources>
         <local2:DataConverter x:Key="gibData"/>
+        <local2:MultiDataConverter x:Key="gibMultiData"/>
         <local2:ImageConverter x:Key="gibImage"/>
         <local2:PasswordStrengthConverter x:Key="gibPassStrength"/>
         <local2:ProgressBarForegroundConverter x:Key="gibPassForeground"/>
@@ -19,6 +20,8 @@
         <local2:GetFirstLetter x:Key="getFirstLetter"/>
         <local2:GetImageDetails x:Key="gibImageDetails"/>
         <local2:GetImgButtonText x:Key="getImgButtonText"/>
+        <local2:MaskPassword x:Key="maskPassword"/>
+        <local2:MailConverter x:Key="mailConverter"/>
         <!--https://stackoverflow.com/questions/2883837/how-to-create-reusable-wpf-grid-layout-->
         <Style x:Key="GridItemsStyle"
            TargetType="ItemsControl">
@@ -36,7 +39,7 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        <CollectionViewSource x:Key="SortingPasswords" Source="{Binding File, Converter={StaticResource gibData}}">
+        <CollectionViewSource x:Key="SortingPasswords" Source="{Binding PasswordsList, Converter={StaticResource gibData}}">
             <CollectionViewSource.GroupDescriptions>
                 <PropertyGroupDescription PropertyName="Name" Converter="{StaticResource getFirstLetter}"/>
             </CollectionViewSource.GroupDescriptions>
@@ -44,6 +47,20 @@
                 <scm:SortDescription PropertyName="Name"/>
             </CollectionViewSource.SortDescriptions>
         </CollectionViewSource>
+        <!--<CollectionViewSource x:Key="SortingPasswords">
+            <CollectionViewSource.Source>
+                <MultiBinding Converter="{StaticResource gibMultiData}">
+                    <Binding Path="PasswordsList"/>
+                    <Binding Path="SearchText"/>
+                </MultiBinding>
+            </CollectionViewSource.Source>
+            <CollectionViewSource.GroupDescriptions>
+                <PropertyGroupDescription PropertyName="Name" Converter="{StaticResource getFirstLetter}"/>
+            </CollectionViewSource.GroupDescriptions>
+            <CollectionViewSource.SortDescriptions>
+                <scm:SortDescription PropertyName="Name"/>
+            </CollectionViewSource.SortDescriptions>
+        </CollectionViewSource>-->
         <Style x:Key="EditBlockStyle" TargetType="TextBlock">
             <Setter Property="Margin" Value="2"/>
             <Setter Property="HorizontalAlignment" Value="Right"/>
@@ -119,7 +136,39 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Button Grid.Row="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Content="Add" Click="AddClick"/>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBox x:Name="SearchTextBox" Text="{Binding SearchText}" Grid.Column="0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
+                         Margin="2,4,2,4" TextChanged="SearchTextChanged">
+                    <!--https://stackoverflow.com/questions/7425618/how-can-i-add-a-hint-text-to-wpf-textbox#comment104827682_7433840-->
+                    <TextBox.Style>
+                        <Style TargetType="TextBox" xmlns:sys="clr-namespace:System;assembly=mscorlib">
+                            <Style.Resources>
+                                <VisualBrush x:Key="CueBannerBrush" AlignmentX="Left" AlignmentY="Center" Stretch="None">
+                                    <VisualBrush.Visual>
+                                        <Label Content="Search..." Foreground="LightGray" />
+                                    </VisualBrush.Visual>
+                                </VisualBrush>
+                            </Style.Resources>
+                            <Style.Triggers>
+                                <Trigger Property="Text" Value="{x:Static sys:String.Empty}">
+                                    <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                                </Trigger>
+                                <Trigger Property="Text" Value="{x:Null}">
+                                    <Setter Property="Background" Value="{StaticResource CueBannerBrush}" />
+                                </Trigger>
+                                <Trigger Property="IsKeyboardFocused" Value="True">
+                                    <Setter Property="Background" Value="White" />
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </TextBox.Style>
+                </TextBox>
+                <Button x:Name="AddPassword" Grid.Column="1" VerticalAlignment="Stretch" Width="40" Margin="2,4,2,4" Content="Add" Click="AddClick"/>
+            </Grid>
             <ListView x:Name="PasswordList" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" 
                       ItemsSource="{Binding Source={StaticResource SortingPasswords}}" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                       SelectionChanged="NewSelection">
@@ -148,7 +197,8 @@
                     <GroupStyle>
                         <GroupStyle.HeaderTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Name, Converter={StaticResource getFirstLetter}}" Background="Gray" Foreground="White"/>
+                                <TextBlock Text="{Binding Name, Converter={StaticResource getFirstLetter}}" Padding="5,0,0,0"
+                                           Background="Gray" Foreground="White" FontSize="15"/>
                             </DataTemplate>
                         </GroupStyle.HeaderTemplate>
                     </GroupStyle>
@@ -183,28 +233,28 @@
             <TextBlock x:Name="IconDetails" Text="{Binding ElementName=ButtonImage, Converter={StaticResource gibImageDetails}, Path=Source}"
                        Grid.Column="1" Grid.Row="0" HorizontalAlignment="Right" VerticalAlignment="Center" TextAlignment="Right" Margin="0,0,10,0"/>
             <TextBlock Style="{StaticResource EditBlockStyle}" Text="Name" Grid.Column="0" Grid.Row="1"/>
-            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Name}" Grid.Column="1" Grid.Row="1"
+            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Name, Mode=OneWay}" Grid.Column="1" Grid.Row="1"
                      x:Name="Name" Style="{StaticResource EditTextStyle}"  />
             <TextBlock Style="{StaticResource EditBlockStyle}" Text="Email" Grid.Column="0" Grid.Row="2"/>
-            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Email}" Grid.Column="1" Grid.Row="2" Style="{StaticResource EditTextStyle}"
-                     x:Name="Email"/>
+            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Email, Mode=OneWay}" Grid.Column="1" Grid.Row="2" 
+                     Style="{StaticResource EditTextStyle}" x:Name="Email"/>
             <TextBlock Style="{StaticResource EditBlockStyle}" Text="Login" Grid.Column="0" Grid.Row="3"/>
-            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Login}" Grid.Column="1" Grid.Row="3" Style="{StaticResource EditTextStyle}"
-                     x:Name="Login" FontFamily="Consolas"/>
+            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Login, Mode=OneWay}" Grid.Column="1" Grid.Row="3" 
+                     Style="{StaticResource EditTextStyle}" x:Name="Login" FontFamily="Consolas"/>
             <TextBlock Style="{StaticResource EditBlockStyle}" Text="Password" Grid.Column="0" Grid.Row="4"/>
             <StackPanel VerticalAlignment="Center" Grid.Column="1" Grid.Row="4">
-                <TextBox x:Name="Password" Text="{Binding ElementName=PasswordList, Path=SelectedItem.Password}"
+                <TextBox x:Name="Password" Text="{Binding ElementName=PasswordList, Path=SelectedItem.Password, Mode=OneWay}"
                          Height="28" Margin="2,2,10,0" VerticalAlignment="Stretch" TextAlignment="Left" VerticalContentAlignment="Center" FontFamily="Consolas"/>
                 <ProgressBar x:Name="PassBar" Height="10" Minimum="0" Maximum="100" Margin="2,0,10,2"
                              Value="{Binding ElementName=Password, Converter={StaticResource gibPassValue}, Mode=OneWay, Path=Text}"
                              Foreground="{Binding ElementName=Password, Converter={StaticResource gibPassForeground}, Path=Text}"/>
             </StackPanel>
             <TextBlock Style="{StaticResource EditBlockStyle}" Text="Website" Grid.Column="0" Grid.Row="5"/>
-            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Website}" Grid.Column="1" Grid.Row="5" Style="{StaticResource EditTextStyle}"
-                     x:Name="Website"/>
+            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Website, Mode=OneWay}" Grid.Column="1" Grid.Row="5" 
+                     Style="{StaticResource EditTextStyle}" x:Name="Website"/>
             <TextBlock Style="{StaticResource EditBlockStyle}" VerticalAlignment="Top" Text="Notes" Grid.Column="0" Grid.Row="6"/>
-            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Notes}" Grid.Column="1" Grid.Row="6" Style="{StaticResource EditTextStyle}"
-                     x:Name="Notes" VerticalContentAlignment="Top"/>
+            <TextBox Text="{Binding ElementName=PasswordList, Path=SelectedItem.Notes, Mode=OneWay}" Grid.Column="1" Grid.Row="6" 
+                     Style="{StaticResource EditTextStyle}" x:Name="Notes" VerticalContentAlignment="Top"/>
             <StackPanel FlowDirection="RightToLeft" Orientation="Horizontal" Background="LightGray" Grid.ColumnSpan="2" Grid.Row="8">
                 <Button Style="{StaticResource EllipseButton}" Content="Cancel" Click="CancelClick"/>
                 <Button Style="{StaticResource EllipseButton}" Content="Apply" Click="ApplyClick"/>
@@ -225,8 +275,11 @@
                 <ItemsControl Style="{StaticResource GridItemsStyle}" x:Name="EmailPanelItem"
                               Visibility="{Binding ElementName=SavedEmail, Path=Text, Converter={StaticResource isVisible}}">
                     <TextBlock Text="Email" Grid.Column="0" Style="{StaticResource EditBlockStyle}"/>
-                    <TextBlock x:Name="SavedEmail" Grid.Column="1" Style="{StaticResource SavedBlockStyle}"
-                               Text="{Binding ElementName=PasswordList, Path=SelectedItem.Email}"/>
+                    <TextBlock Grid.Column="1" Style="{StaticResource SavedBlockStyle}">
+                        <Hyperlink NavigateUri="{Binding ElementName=PasswordList, Path=SelectedItem.Email, Converter={StaticResource mailConverter}}">
+                            <TextBlock x:Name="SavedEmail" Text="{Binding ElementName=PasswordList, Path=SelectedItem.Email}"/>
+                        </Hyperlink>
+                    </TextBlock>
                     <Button Grid.Column="2" Style="{StaticResource CopyButton}" Click="CopyEmail"/>
                 </ItemsControl>
                 <ItemsControl Style="{StaticResource GridItemsStyle}" x:Name="LoginPanelItem"
@@ -241,7 +294,7 @@
                     <TextBlock Text="Password" Grid.Column="0" Style="{StaticResource EditBlockStyle}"/>
                     <StackPanel VerticalAlignment="Center" Grid.Column="1">
                         <TextBlock x:Name="SavedPassword" Grid.Column="1" Style="{StaticResource SavedBlockStyle}" 
-                               Text="{Binding ElementName=PasswordList, Path=SelectedItem.Password}"/>
+                               Text="{Binding ElementName=PasswordList, Path=SelectedItem.Password, Converter={StaticResource maskPassword}}"/>
                         <ProgressBar x:Name="SavedPassBar" Height="10" Minimum="0" Maximum="100" Margin="2,0,10,2"
                              Value="{Binding ElementName=Password, Converter={StaticResource gibPassValue}, Mode=OneWay, Path=Text}"
                              Foreground="{Binding ElementName=Password, Converter={StaticResource gibPassForeground}, Path=Text}"/>
@@ -251,8 +304,11 @@
                 <ItemsControl Style="{StaticResource GridItemsStyle}" x:Name="WebsitePanelItem"
                               Visibility="{Binding ElementName=SavedWebsite, Path=Text, Converter={StaticResource isVisible}}">
                     <TextBlock Text="Website" Grid.Column="0" Style="{StaticResource EditBlockStyle}"/>
-                    <TextBlock x:Name="SavedWebsite" Grid.Column="1" Style="{StaticResource SavedBlockStyle}"
-                               Text="{Binding ElementName=PasswordList, Path=SelectedItem.Website}"/>
+                    <TextBlock Grid.Column="1" Style="{StaticResource SavedBlockStyle}">
+                        <Hyperlink NavigateUri="{Binding ElementName=PasswordList, Path=SelectedItem.Website}" RequestNavigate="NavigateWebsite">
+                            <TextBlock x:Name="SavedWebsite" Text="{Binding ElementName=PasswordList, Path=SelectedItem.Website}"/>
+                        </Hyperlink>
+                    </TextBlock>
                 </ItemsControl>
                 <ItemsControl Style="{StaticResource GridItemsStyle}" x:Name="NotesPanelItem"
                               Visibility="{Binding ElementName=SavedNotes, Path=Text, Converter={StaticResource isVisible}}">
@@ -260,12 +316,14 @@
                     <TextBlock x:Name="SavedNotes" Grid.Column="1" Style="{StaticResource SavedBlockStyle}"
                                Text="{Binding ElementName=PasswordList, Path=SelectedItem.Notes}"/>
                 </ItemsControl>
-                <ItemsControl Style="{StaticResource GridItemsStyle}">
+                <ItemsControl Style="{StaticResource GridItemsStyle}" 
+                              Visibility="{Binding ElementName=SavedCreationTime, Path=Text, Converter={StaticResource isVisible}}">
                     <TextBlock Text="Creation time" Grid.Column="0" Style="{StaticResource EditBlockStyle}"/>
                     <TextBlock x:Name="SavedCreationTime" Grid.Column="1" Style="{StaticResource SavedBlockStyle}" HorizontalAlignment="Center"
                                Text="{Binding ElementName=PasswordList, Path=SelectedItem.CreationDate}"/>
                 </ItemsControl>
-                <ItemsControl Style="{StaticResource GridItemsStyle}">
+                <ItemsControl Style="{StaticResource GridItemsStyle}"
+                              Visibility="{Binding ElementName=SavedEditTime, Path=Text, Converter={StaticResource isVisible}}">
                     <TextBlock Text="Last edit time" Grid.Column="0" Style="{StaticResource EditBlockStyle}"/>
                     <TextBlock x:Name="SavedEditTime" Grid.Column="1" Style="{StaticResource SavedBlockStyle}" HorizontalAlignment="Center"
                                Text="{Binding ElementName=PasswordList, Path=SelectedItem.EditDate}"/>
