--- a/Password Manager/Pages/DirectoryPage.xaml
+++ b/Password Manager/Pages/DirectoryPage.xaml
@@ -7,7 +7,10 @@
              xmlns:local="clr-namespace:Password_Manager.Pages"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <Page.Resources>
+        <local:ShowInfo x:Key="showInfo"/>
+    </Page.Resources>
     <Grid>
-        <TextBlock Text="{Binding}" FontSize="20"/>
+        <TextBlock Text="{Binding Converter={StaticResource showInfo}}" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="20"/>
     </Grid>
 </Page>
