--- a/Password Manager/Pages/ImagePage.xaml
+++ b/Password Manager/Pages/ImagePage.xaml
@@ -10,16 +10,12 @@
     <Page.Resources>
         <local:ImagePageConverter x:Key="imgPageConverter"/>
     </Page.Resources>
-    <!--<DockPanel x:Name="container" VerticalAlignment="Top">
-        <Image Source="{Binding File, Converter={StaticResource imgPageConverter}}" DockPanel.Dock="Top" Margin="5,0,5,10"/>
-        <Button Content="Save Image" Height="20" Width="100" DockPanel.Dock="Bottom"/>
-    </DockPanel>-->
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        <Image Source="{Binding File, Converter={StaticResource imgPageConverter}}" Grid.Row="0" Margin="5,0,5,10"/>
-        <Button Content="Save Image" Height="20" Width="100" Grid.Row="1" Margin="0,0,0,10"/>
+        <Image x:Name="SavedImage" Source="{Binding Converter={StaticResource imgPageConverter}}" Grid.Row="0" Margin="5,0,5,10"/>
+        <Button Content="Save Image" Height="20" Width="100" Grid.Row="1" Margin="0,0,0,10" Click="SaveImage"/>
     </Grid>
 </Page>
