--- a/Password Manager/Pages/PasswordEditorPage.xaml
+++ b/Password Manager/Pages/PasswordEditorPage.xaml
@@ -47,20 +47,6 @@
                 <scm:SortDescription PropertyName="Name"/>
             </CollectionViewSource.SortDescriptions>
         </CollectionViewSource>
-        <!--<CollectionViewSource x:Key="SortingPasswords">
-            <CollectionViewSource.Source>
-                <MultiBinding Converter="{StaticResource gibMultiData}">
-                    <Binding Path="PasswordsList"/>
-                    <Binding Path="SearchText"/>
-                </MultiBinding>
-            </CollectionViewSource.Source>
-            <CollectionViewSource.GroupDescriptions>
-                <PropertyGroupDescription PropertyName="Name" Converter="{StaticResource getFirstLetter}"/>
-            </CollectionViewSource.GroupDescriptions>
-            <CollectionViewSource.SortDescriptions>
-                <scm:SortDescription PropertyName="Name"/>
-            </CollectionViewSource.SortDescriptions>
-        </CollectionViewSource>-->
         <Style x:Key="EditBlockStyle" TargetType="TextBlock">
             <Setter Property="Margin" Value="2"/>
             <Setter Property="HorizontalAlignment" Value="Right"/>
@@ -226,7 +212,7 @@
             <Button x:Name="IconButton" Background="White" Width="50" Height="50" Margin="2,2,2,2"
                     HorizontalAlignment="Left" VerticalAlignment="Center" Grid.Column="1" Grid.Row="0" Click="AddImageClick">
                 <StackPanel>
-                    <Image Source="{Binding ElementName=PasswordList, Path=SelectedItem.Icon}" x:Name="ButtonImage"/>
+                    <Image Source="{Binding ElementName=PasswordList, Path=SelectedItem.Icon, Mode=OneWay}" x:Name="ButtonImage"/>
                     <TextBlock x:Name="ButtonText" Text="{Binding ElementName=ButtonImage, Converter={StaticResource getImgButtonText}, Path=Source}"/>
                 </StackPanel>
             </Button>
